# jreader

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE.txt  README.md  package-lock.json  package.json
.cursor/commands/: commit-current-changes.md
.githooks/: pre-commit
.github/workflows/: extension-ci.yml  frontend-ci.yml  rust-ci.yml
jreader-extension/: .gitignore  AUTH_ERROR_HANDLING.md  DEBUGGING_GUIDE.md  ENVIRONMENT_SETUP.md  PRIVACY_POLICY.md  README.md  REVIEWER_PACKET.md  STORE_SUBMISSION.md  TESTING.md  auth-callback.html  build.mjs  components.json  eslint.config.js  manifest.chrome.json  manifest.firefox.json  options.html  package.json  popup.html  tailwind.config.js  tsconfig.json  vitest.config.ts
jreader-extension/scripts/: generate-icons.js
jreader-extension/src/: anki-comm.ts  content.ts  popup.tsx  settings.tsx  sw-main.ts
jreader-frontend/: .env.local.example  .gitignore  MIGRATION_STATUS.md  README.md  STRIPE_SETUP.md  TESTING_GUIDE.md  drizzle.config.ts  eslint.config.js  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  types.ts
jreader-frontend/app/: client-root.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
jreader-frontend/components/: ActivityHeatmap.tsx  AnnouncementBanner.tsx  AppShell.tsx  AppSidebar.tsx  AutoSyncButton.tsx  AutoSyncIndicator.tsx  BaseHeader.tsx  BookmarkInfoCard.tsx  CardsMiningGraph.tsx  ExtensionIndicator.tsx  ExtensionInfoCard.tsx  FullscreenButton.tsx  GuestUserCard.tsx  Header.tsx  ImportProgressViewer.tsx  KanjiGrid.tsx  KanjiHoverCard.tsx  KanjiInfoCard.tsx  KanjiLegend.tsx  KanjiModeIndicator.tsx  KanjiProgressGraph.tsx  LandingAuthCta.tsx  LibraryPane.tsx  (+17 more)
jreader-rs/: .gitignore  Cargo.toml  bootstrap-audio-db.sh  deny.toml  nixpacks.toml  verify-audio-db.sh
jreader-rs/.cargo/: config.toml
jreader-rs/audio-db-bootstrap/: Cargo.toml  README.md  bootstrap_script.py
jreader-rs/audio-db-bootstrap/src/: lib.rs  main.rs
jreader-rs/audio-db-query/: Cargo.toml
jreader-rs/audio-db-query/src/: lib.rs
jreader-rs/jreader-service/: .env.example  .gitignore  Cargo.toml  README.md
jreader-rs/jreader-service/src/: auth.rs  conversions.rs  dict_db_scan_fs.rs  dictionaries.rs  http_handlers.rs  import_progress.rs  main.rs  mecab.rs  user_preferences.rs  users.rs  xml.rs  zip_utils.rs
jreader-rs/jreader-service/tests/fixtures/: test_book.epub
jreader-rs/scripts/: render_build.sh
jreader-rs/yomitan-format/: Cargo.toml
jreader-rs/yomitan-format/src/: lib.rs
jreader-rs/yomitan-format/src/json_schema/: index.rs  kanji_bank_v3.rs  kanji_meta_bank_v3.rs  mod.rs  tag_bank_v3.rs  term_bank_v3.rs  term_meta_bank_v3.rs
jreader-rs/yomitan-format/src/kv_store/: db.rs  mod.rs  utils.rs
jreader-shared-types-ts/: package.json
(+254 files in other folders)
