[package]
name = "jreader-service"
version = "0.1.0"
edition = "2021"
license.workspace = true
default-run = "jreader-service-server"

[dependencies]
yomitan-format = { path = "../yomitan-format" }
serde_json = "1.0"
tokio = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "fs"] }
http = "0.2"

vibrato = "0.5"
wana_kana = "4.0"
zstd = "0.13"

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { workspace = true }
zip-extensions = "0.8"
quick-xml = "0.23" # TODO: Update to 0.37
serde = "1.0"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-macros = { version = "0.3.0-rc.3" }
mime_guess = "2.0"

time = { version = "0.3", features = ["formatting"] }
httpdate = "1.0"
tower = "0.5"
async_zip = { version = "0.0.17", features = ["full"] }

tokio-util = { version = "0.7", features = ["compat"] }
sanitize-filename = "0.6"

camino = { workspace = true }
unicode-normalization = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

lazy_static = "1.5"
regex = "1.11"
html5ever = "0.29"
markup5ever_rcdom = "0.3"
scraper = "0.21"
ego-tree = "0.9"

rusqlite = { workspace = true }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"] }
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"

async-trait = "0.1.83"
jsonwebtoken = "9.3.0"
hmac = "0.12"
base64 = "0.21"
sha2 = "0.10"

axum_typed_multipart = "0.14.0"
tempfile = "3.15.0"
audio-db-query = { path = "../audio-db-query" }

csv = "1.3"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "jreader-service-server"
path = "src/main.rs"
