[package]
name = "yomitan-format"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rusqlite = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }
zip = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
lazy_static = "1.5"
tempfile = "3.14"
unicode-normalization = { workspace = true }